--- a/k8s/configmap/configmap.yaml
+++ b/k8s/configmap/configmap.yaml
@@ -4,9 +4,9 @@ metadata:
   name: neo4j-config
   namespace: default
 data:
-  NEO4J_URI: neo4j+s://51e7fb01.databases.neo4j.io
+  NEO4J_URI: neo4j+s://xxxxx.databases.neo4j.io
   NEO4J_USER: neo4j
-  NEO4J_PASSWORD: vJaAjE_RGl-dAlx6Lk5MfKk7cEmMQBzzXhtOWfoMDB8
+  NEO4J_PASSWORD: xxxxx
 ---
 apiVersion: apps/v1
 kind: Deployment
