--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,2 +1,4 @@
-FROM my-apache:v1
-COPY index.html /var/www/html/
+FROM nginx:latest
+RUN apt-get update
+RUN apt-get install nano
+COPY dummy.txt /tmp/
