--- a/k8s/deployment/deployment-rollingupdate.yaml
+++ b/k8s/deployment/deployment-rollingupdate.yaml
@@ -5,7 +5,13 @@ metadata:
   labels:
     app: web-app
 spec:
-  replicas: 12
+  replicas: 8
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+  minReadySeconds: 15
   selector:
     matchLabels:
       app: web-app
