--- a/k8s/daemonset.yaml
+++ b/k8s/daemonset.yaml
@@ -1,20 +1,19 @@
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: monitor
+  name: daemonset-example
+  labels:
+    app: daemonset-example
 spec:
   selector:
     matchLabels:
-      app: monitor-nginx
+      app: daemonset-example
   template:
     metadata:
       labels:
-        app: monitor-nginx
+        app: daemonset-example
     spec:
       containers:
-        - name: node-monitor-nginx-container
-          image: nginx:alpine
-          ports:
-          - containerPort: 80
-            hostPort: 8080
-            protocol: TCP
+      - name: busybox
+        image: busybox
+        command: ['sh', '-c', 'while true; echo doing some system level work..; do sleep 6; done;']
