--- a/k8s/security/rbac/cluster-role-binding.yaml
+++ b/k8s/security/rbac/cluster-role-binding.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: reader-pod-cluster-level
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -5,8 +10,9 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: reader-pod-cluster-level
-  apiGroup: rbac.authorization.k8s.io
+  namespace: default
+  apiGroup: ""
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: pod-service-cluster-role
   apiGroup: rbac.authorization.k8s.io
